- Lowered Overcrowding penalty for lineups with 3 forwards. Attack ratings with 3 forwards should now be closer to the reality.
- TS Forecast Module should now display confidence at the correct level.
- Maintain Captain and Set piece taker when the line up is reversed.
- The old penalty shooter button is gone. Look for the new tab instead.

Language updates:
-----------------
- Added Japanese as new HO language (thx nomad331).
- Updated English translations (thx edswifa).
- Updated French translations (thx davidatorus).
- Updated German translations (thx Werder0405).

ThemeManager:
------------
- New keys:
	. Icons: imagePanel.background, grassPanel.background, remove, transfer.in, transfer.out, MatchTypeTourneyGrp, MatchTypeTourneyPlayOff, exclamation-red, exclamation, control-double-090, control-double-270, order_set, plays_at_beginning, is_reserve, not_in_lineup, move_up, move_down, move_left, move_right, arrow_circle_double, arrow_move, substitution
	. Colors: matchtype.tourneyGroup.bg, matchtype.tourneyFinals.bg, teamanalyzer.teamlist.league, teamanalyzer.teamlist.cup, teamanalyzer.teamlist.nexttournament, teamanalyzer.teamlist.tournament
- Fatcow-Theme: Added and updated some icons and colors.

Plugin (Module) Updates:
---------------
- Active developed Plugins are now integrated as modules, outdated and not more developed Plugins are NOT integrated/supported anymore.
	. Calendar, Commons, Converter, Feedback, PerformanceOverview, SeriesStats, StarCalc, Teamplanner and YouthClub were NOT integrated.
	. NTHRF, SpecialEvents, TeamAnalyzer, TeamOfTheWeek, TrainingExperience, Transfers, TS Forecast were integrated.
	. ArenaSizer was moved into tools + got more options and statistical section.
	. DevHelp -> SQL Dialog integrated for developers.
	. Evilcard was integrated + got a small rearrangement of panels.
	. ExperienceViewer moved as submodule into Playeranalysis.
	. Flags was not integrated. Functions are integrated in IFA module.