@@ -44,6 +44,7 @@ Changelist HO! 1.432
 - TS Forecast Module should now display confidence at the correct level.
 - Maintain Captain and Set piece taker when the line up is reversed.
 - The old penalty shooter button is gone. Look for the new tab instead.
+- Added ability to reset all positional orders in the line up tab.
 
 Language updates:
 -----------------
